# ssdpy

./: .coveragerc  .editorconfig  .travis.yml  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: api.rst  cli.rst  conf.py  index.rst
docs/usage/: installation.rst  quickstart.rst
ssdpy/: __init__.py  client.py  compat.py  constants.py  http_helper.py  protocol.py  server.py  ssdpy.py  version.py
ssdpy/cli/: client.py  server.py
tests/: compat.py  test_cli_client.py  test_cli_server.py  test_client.py  test_compat.py  test_http_helper.py  test_protocol.py  test_server.py  test_system.py
