[metadata]
name = ssdpy
version = attr: ssdpy.version.VERSION
description = Python SSDP library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Moshi Binyamini
author_email = moshi@moshib.in
url = https://github.com/MoshiBin/ssdpy
project_urls =
    Documentation = https://ssdpy.readthedocs.io/
    Issue Tracker = https://github.com/MoshiBin/ssdpy/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,<4
install_requires = setuptools >= 45.2.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest >= 3.0.0

[options.entry_points]
console_scripts =
    ssdpy-server = ssdpy.cli.server:main
    ssdpy-discover = ssdpy.cli.client:main
